--- a/app/javascript/app/components/results-list/results-list-styles.scss
+++ b/app/javascript/app/components/results-list/results-list-styles.scss
@@ -6,7 +6,7 @@
   background-color: $white;
   max-height: 300px;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 11;
 }
 
 .listItem {
